sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: value downto is not a member of Int
	for (i <- n-2 downto 0) {
                      ^