sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var k = false
	var n = getNombreValeurs()
	for (i <- n-2 downto 0) {
		for (j <- 0 to i) {
			if (plusPetit(j+1,j)) {
				echange(j,j+1)
			}
		}
	}
}
